Fix integration tests after changing share storages logical id to be the hash of share storage name
After changing share storage logical Ids to be the hash of the name, integration tests need to be changed accordingly. The logical Id of the volumes are not longer EBS0, FSX1, EFS0...

Signed-off-by: chenwany <chenwany@amazon.com>

--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.update.yaml
@@ -31,11 +31,11 @@ Scheduling:
           # to test the managed sg allow access from the custom sg
 SharedStorage:
   - MountDir: efs
-    Name: efs
+    Name: {{ efs_name }}
     StorageType: Efs
   {% if scheduler != "awsbatch" %}
   - MountDir: fsx
-    Name: fsx
+    Name: {{ fsx_name }}
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 1200
