--- a/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.yaml
+++ b/tests/integration-tests/tests/networking/test_security_groups/test_overwrite_sg/pcluster.config.yaml
@@ -31,11 +31,11 @@ Scheduling:
           - {{ vpc_security_group_id }}
 SharedStorage:
   - MountDir: efs
-    Name: efs
+    Name: {{ efs_name }}
     StorageType: Efs
   {% if scheduler != "awsbatch" %}
   - MountDir: fsx
-    Name: fsx
+    Name: {{ fsx_name }}
     StorageType: FsxLustre
     FsxLustreSettings:
       StorageCapacity: 1200
