--- a/tests/integration-tests/tests/storage/test_deletion_policy/test_retain_on_deletion/pcluster.config.yaml
+++ b/tests/integration-tests/tests/storage/test_deletion_policy/test_retain_on_deletion/pcluster.config.yaml
@@ -31,7 +31,7 @@ Scheduling:
           - {{ private_subnet_id }}
 SharedStorage:
   - MountDir: /ebs1
-    Name: ebs0
+    Name: {{ ebs_name }}
     StorageType: Ebs
     EbsSettings:
       DeletionPolicy: Retain
