--- a/tests/integration-tests/tests/tags/test_tag_propagation/test_tag_propagation/pcluster.config.update.yaml
+++ b/tests/integration-tests/tests/tags/test_tag_propagation/test_tag_propagation/pcluster.config.update.yaml
@@ -31,5 +31,5 @@ Scheduling:
           - {{ private_subnet_id }}
 SharedStorage:
   - MountDir: /shared
-    Name: name1
+    Name: {{ volume_name }}
     StorageType: Ebs
