--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/pcluster.config.before_update.yaml
@@ -112,7 +112,7 @@ Scheduling:
           - {{ private_subnet_id }}
 SharedStorage:
   - MountDir: /shared
-    Name: name1
+    Name: {{ volume_name}}
     StorageType: Ebs
 Tags:
   - Key: ConfigFileTag
