--- a/tests/integration-tests/configs/released.yaml
+++ b/tests/integration-tests/configs/released.yaml
@@ -1,10 +1,6 @@
 {%- import 'common.jinja2' as common with context -%}
+{%- set SCHEDULER_PLUGIN_TESTS = false -%}
 ---
-scheduler-plugins:
-  slurm_plugin:
-    scheduler-definition: "../../scheduler_plugins/slurm/utils/upload_artifacts.sh"
-    scheduler-commands: "tests.common.schedulers_common.SlurmCommands"
-    requires-sudo: true
 test-suites:
 {% filter indent(2) %}
 {% include 'common/common.yaml' %}
